# stakehabit-api

./: .envexample  DEVELOPMENT.md  FRONTEND_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  alembic.ini  contributions.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_create_pools.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  habits.py  pools.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: checkin.py  habit.py  pool.py  pool_checkin.py  pool_participant.py  user.py
app/schemas/: checkin.py  habit.py  pool.py  streak.py  user.py
app/services/: auth_service.py  checkin_service.py  habit_service.py  pool_service.py  streak_service.py  user_service.py
stakehabit_api.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_checkin.py  test_habits.py  test_pools.py  test_streak.py
