[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stakehabit-api"
version = "0.1.0"
description = "StakeHabit API using FastAPI, SQLAlchemy, PostgreSQL, and JWT authentication."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.24.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "bcrypt<5",
    "passlib[bcrypt]>=1.7",
    "PyJWT>=2.8",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "alembic>=1.12",
    "python-multipart>=0.0.6"
]
[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "httpx>=0.26",
    "pytest-asyncio>=0.22"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
